<resources>
    <string name="app_name">My Application</string>
    <string name="criar_nova_tarefa">criar nova tarefa</string>
    <string name="tarefas">Tarefas</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_date">Data</string>
    <string name="label_hora">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description_new_task">Nova Tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_you_dont_have_tasks">Ops! Você não possui\nnenhuma tarefa</string>
</resources>