<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate"
        app:title="@string/label_new_task"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_end"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:hint="@string/label_title"
        app:layout_constraintEnd_toEndOf="@+id/guid_end"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/label_date"
        app:layout_constraintEnd_toStartOf="@+id/til_hour"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/til_title"
        app:startIconDrawable="@drawable/ic_calendar" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_hora"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/guid_end"
        app:layout_constraintStart_toEndOf="@+id/til_date"
        app:layout_constraintTop_toTopOf="@+id/til_date"
        app:startIconDrawable="@drawable/ic_timer">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btncancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_cancel"
        app:layout_constraintBottom_toTopOf="@+id/btn_new_task"
        app:layout_constraintEnd_toStartOf="@+id/guid_end"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/til_title"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_task"
        android:layout_width="0dp"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_height="wrap_content"
        android:text="@string/label_new_task"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guid_end"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>